--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@
 ---
 
 <footer
-  class="bg-primary flex flex-wrap justify-around items-center absolute bottom-0 w-full"
+  class="bg-primary flex flex-wrap justify-around items-center  bottom-0 w-full"
 >
   <div>
     <img src="/image/logo.webp" alt="Ilogs" class="w-12 h-12 md:w-20 md:h-20" />
