--- a/src/pages/FAQPage.astro
+++ b/src/pages/FAQPage.astro
@@ -7,9 +7,9 @@ import Arrowleft from "../assets/svg/arrowleft.svg";
 ---
 
 <Layout title="Preguntas-Frecuentes">
-  <section class="w-auto h-full sm:w-full sm:h-full pt-20 sm:mb-10">
+  <section class="w-auto h-full sm:w-full sm:h-full pt-20 mb-5 sm:mb-10">
     <div class="faq-page relative  flex items-center justify-center mb-4 sm:mb-10">
-      <a href="/" class="absolute left-4 fill-primary hover:fill-secondary"
+      <a href="/" class="absolute left-0 lg:left-4 fill-primary hover:fill-secondary"
         ><Arrowleft class="w-8 h-8 sm:w-12 sm:h-12" /></a
       >
       <Title title="Preguntas Frecuentes" />
