--- a/src/components/CallToAction.astro
+++ b/src/components/CallToAction.astro
@@ -7,7 +7,7 @@ import Mochila from "../assets/svg/icon-mochila.svg";
 ---
 
 <section class="section-call mt-16 py-16 sm:py-8 p-5 md:p-20 bg-primary relative overflow-hidden" id="contact-section">
-  <Title title="Contactanos" class="text-light mb-8 fade-in" />
+  <Title title="Contáctanos" class="text-light mb-8 fade-in" />
 
   <form
     class="w-full max-w-sm sm:max-w-md md:max-w-lg mx-auto grid grid-cols-1 md:grid-cols-2 gap-3 relative z-20 mb-8 fade-in"
