--- a/src/components/FAQCard.astro
+++ b/src/components/FAQCard.astro
@@ -9,9 +9,9 @@ const { question, answer, number } = Astro.props;
 ---
 <div class="flex justify-center mx-8 mb-5">
 <div
-  class="flex justify-start items-center gap-5 rounded-2xl p-3 drop-shadow-xl/50 shadow-md  sm:w-2xl"
+  class="flex justify-start items-center gap-5 rounded-2xl p-3  shadow-md  sm:w-2xl"
 >
-  <div class="bg-secondary w-18 max-h-min sm:w-12 sm:h-auto rounded-full flex items-center justify-center">
+  <div class="bg-secondary  px-3 py-1  rounded-full flex items-center justify-center">
       <h1 class="font-bold text-base sm:text-lg">{number}</h1>
   </div>
   <div class="">
