--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -14,7 +14,7 @@ import Pen from "../assets/svg/pen.svg";
         class="w-full flex flex-col items-center text-center justify-center mt-30 lg:mt-60"
       >
         <h1 class="hero-text font-brand text-base lg:text-4xl text-light">
-          Digitaliza las salidas escolares.<br />Hazlas más seguras y ágiles.
+          Digitaliza las salidas escolares<br />Hazlas más seguras y ágiles
         </h1>
         <p class="hero-text text-base lg:text-xl text-light mt-2">
           Optimiza cada entrega con una solución <br /> sencilla y confiable.
@@ -46,8 +46,8 @@ import Pen from "../assets/svg/pen.svg";
         d="M0,160L80,176C160,192,320,224,480,202.7C640,181,800,107,960,69.3C1120,32,1280,32,1360,32L1440,32L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"
       ></path>
     </svg> 
-       <Rule class="button-hero absolute z-10 w-20 lg:w-45 bottom-10 lg:bottom-50 left-0 lg:left-10 -rotate-40"/>
-    <Rule2 class="button-hero absolute z-10 w-20 lg:w-45 top-15 lg:top-25 rotate-85 lg:rotate-80 left-0 lg:left-8"/>
+       <Rule class="button-hero absolute z-10 w-20 lg:w-45 bottom-10 lg:bottom-50 left-0 -rotate-40"/>
+    <Rule2 class="button-hero absolute z-10 w-20 lg:w-45 top-15 lg:top-15 rotate-85 lg:rotate-80 left-0 lg:left-8"/>
     <!-- <Apple class="absolute z-10 w-45 bottom-50 right-1/2 rotate-10"/> -->
     <Pen class ="button-hero absolute z-10 w-18 lg:w-45 top-15 lg:top-20 right-5 lg:right-1/2 -rotate-40 lg:rotate-45"/>
   </div>
