--- a/src/components/Videotestimonio.astro
+++ b/src/components/Videotestimonio.astro
@@ -30,7 +30,7 @@ const videos = [
             <div class="swiper-slide flex justify-center items-center">
               <div
                 class="testimonials flex aspect-video max-w-4xl  rounded-xl overflow-hidden relative cursor-pointer"
-                onclick={`this.outerHTML = '<iframe class="justify-center items-center w-80 lg:w-full h-50 lg:h-[439px] rounded-xl" src="https://www.youtube.com/embed/${video.id}?autoplay=1" title="${video.title}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>'`}
+                onclick={`this.outerHTML = '<iframe class="justify-center items-center max-w-4xl w-full h-[250px] sm:h-[320px] md:h-[510px] lg:h-[500px] rounded-xl" src="https://www.youtube.com/embed/${video.id}?autoplay=1" title="${video.title}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>'`}
               >
                 <img
                   src={video.thumbnail}
@@ -39,7 +39,7 @@ const videos = [
                   loading="lazy"
                 />
                 <div class="absolute inset-0 flex items-center justify-center">
-                  <div class="w-25 h-25 lg:w-35 lg:h-35 bg-center bg-no-repeat bg-contain fill-secondary opacity-45 cursor-pointer group hover:scale-115 duration-500">
+                  <div class="w-25 h-25 md:w-35 md:h-35 bg-center bg-no-repeat bg-contain fill-secondary opacity-45 cursor-pointer group hover:scale-115 duration-500">
                     <Play />
                   </div>
                 </div>
