Remove checkbox  form

--- a/src/components/CallToAction.astro
+++ b/src/components/CallToAction.astro
@@ -162,7 +162,7 @@ import Mochila from "../assets/svg/icon-mochila.svg";
             <label for="efficiency">Agilizar el proceso de entrega</label>
           </div>
 
-          <div class="flex items-center gap-1">
+          <!-- <div class="flex items-center gap-1">
             <input
               type="checkbox"
               id="events"
@@ -171,7 +171,7 @@ import Mochila from "../assets/svg/icon-mochila.svg";
               class="h-5 w-5 border border-light rounded-md bg-light accent-light"
             />
             <label for="events">Monitoriar eventos escolares</label>
-          </div>
+          </div> -->
         </div>
       </fieldset>
     </div>
