Change banner OG

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,31 +18,53 @@ interface Props {
     <link rel="icon" type="image/svg+xml" href="/icon-ilogs.svg" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
+    <title>iLogs - Seguridad & Orden en Salidas Escolares</title>
+    <meta
+      name="description"
+      content="Digitaliza las salidas escolares con iLogs. Ofrece tranquilidad a padres, seguridad a alumnos y eficiencia al personal educativo."
+    />
+    <meta
+      name="keywords"
+      content="Control de salida, Gestión de salidas escolar, Seguridad estudiantil, Horarios de salida escolar, salida supervisada, Seguridad escolar, Gestión de permisos escolares, Control parental, Informes de salida escolar, Monitorización estudiantil, Registro de incidentes de salida, logística de entrada, protección escolar, prevención escolar, escuela, educación"
+    />
+    <meta name="robots" content="index, follow" />
     <meta property="og:title" content="iLogs - Seguridad & Orden" />
+
+    <link rel="canonical" href="https://descubre.ilogs.com.mx/" />
+
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="iLogs - Seguridad & Orden en Salidas Escolares"
+    />
     <meta
       property="og:description"
       content="iLogs Seguridad & Orden en cada Salida Escolar"
     />
     <meta property="og:url" content="https://descubre.ilogs.com.mx/" />
-    <meta property="og:image" content="/image/BannerOG.webp" />
+    <meta
+      property="og:image"
+      content="https://descubre.ilogs.com.mx/image/banner-ilogs-OG.webp"
+    />
+    <meta property="og:site_name" content="iLogs" />
+    <meta property="og:locale" content="es_MX" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="iLogs" />
+    <meta
+      name="twitter:title"
+      content="iLogs - Seguridad & Orden en Salidas Escolares"
+    />
     <meta
       name="twitter:description"
-      content="iLogs Seguridad & Orden en cada Salida Escolar"
+      content="Digitaliza las salidas escolares con iLogs, tranquilidad para padres y eficiencia para escuelas."
     />
     <meta
       name="twitter:image"
-      content="https://descubre.ilogs.com.mx/image/BannerOG.webp"
+      content="https://descubre.ilogs.com.mx/image/banner-ilogs-OG.webp"
     />
     <meta name="twitter:url" content="https://descubre.ilogs.com.mx/" />
-    <meta
-      name="description"
-      content="Digitaliza las salidas escolares con iLogs, las salidas escolares son más seguras, ofreciendo confianza a padres y personal educativo"
-
-    />
-    <meta name="Keywords" content="Control de salida, Gestión de salidas escolar, Seguridad estudiantil, Horarios de salida escolar, salida supervisada, Seguridad escolar, Gestión de permisos escolares, Control parental, Informes de salida escolar, Monitorización estudiantil, Registro de incidentes de salida, logistica de entrada, protección escolar,prevención escolar,escuela, educación">
+    <meta name="twitter:site" content="@ilogsmx" />
+    <meta name="twitter:creator" content="@ilogsmx" />
   </head>
   <body
     class="bg-background text-foreground font-sans relative overflow-x-hidden"
